Problema do orderBy no campo "votes" aparentemente resolvido